Fix card layouts on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,16 @@ body {
     text-decoration: none;
 }
 
-.sidebar {
-    position: fixed;
+@media (min-width: 992px) {
+    .sidebar {
+        position: fixed;
+    }
+}
+
+@media (max-width: 993px) {
+    .sidebar {
+        margin-bottom: 2em;
+    }
 }
 
 #github {
